force-app/main/default/objects/Job_API_Configuration__mdt/Job_API_Configuration__mdt.object-meta.xml
<CustomObject>
    <description>Stores endpoint metadata and configuration.  Belongs to the data layer.</description>
    <label>Job API Configuration</label>
    <pluralLabel>Job API Configurations</pluralLabel>
</CustomObject>