force-app/main/default/objects/Job_API_Configuration__mdt/fields/Body_Template__c.field-meta.xml
<CustomField>
    <fullName>Body_Template__c</fullName>
    <description>Dynamic Body Template. Must be valid JSON</description>
    <label>Body Template</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>