force-app/main/default/objects/Job_API_Configuration__mdt/fields/Headers__c.field-meta.xml
<CustomField>
    <fullName>Headers__c</fullName>
    <description>Optional additional headers. Must be valid JSON.</description>
    <label>Headers</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>