force-app/main/default/objects/Job_API_Configuration__mdt/fields/Http_Method__c.field-meta.xml
<CustomField>
    <fullName>Http_Method__c</fullName>
    <description>Callout Method</description>
    <label>Http Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>POST</fullName>
                <default>true</default>
                <label>POST</label>
            </value>
            <value>
                <fullName>GET</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>