force-app/main/default/objects/Job_API_Configuration__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable / Disable the configuration</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>