force-app/main/default/objects/Job_API_Configuration__mdt/fields/Named_Credential__c.field-meta.xml
<CustomField>
    <fullName>Named_Credential__c</fullName>
    <description>Reference to the Named Credential</description>
    <label>Named Credential</label>
    <length>255</length>
    <type>Text</type>
</CustomField>